fix: overflow hidden on textbox's map

--- a/src/components/AnimalBio/TextBox/TextBox.module.scss
+++ b/src/components/AnimalBio/TextBox/TextBox.module.scss
@@ -116,6 +116,11 @@
     .viewMap {
       max-width: 240px;
     }
+    .animalMap {
+      max-width: 600px;
+      width: 100%;
+      height: 450px;
+    }
   }
 }
 @media (min-width: 1920px) {
